# final-project-oop

./: CMakeLists.txt
src/: main.cpp
src/base/controller/: base_controller.h
src/base/model/: base_model.h
src/base/view/: base_view.h  navigator.h
src/models/: course.h  grade.h  module.h  user.h
src/screens/auth/: auth_check_view.h  auth_controller.h  auth_model.h  auth_view.h
src/screens/course/: add_grade.h  course_view.h  show_grades.h
src/screens/home/admin/: admin_home.h  course_select.h  list_all_courses.h
src/screens/home/admin/add_course/: add_course.h
src/screens/home/admin/add_student/: add_student.h
src/screens/home/admin/add_teacher/: add_teacher.h
src/screens/home/student/: student_home.h  student_home_model.h
src/screens/home/teacher/: teacher_home.h  teacher_home_model.h
src/screens/modules/: module_create.h  show_modules.h
src/screens/router/: router_view.h
src/service/auth/: auth_service.h
src/service/course/: course_service.h  course_store.h
src/service/grades/: GradesService.h
src/service/module/: module_service.h
src/utils/: dialog_view.h  integer_input.h  list_view.h  string_split.h  student_selector.h
